added styles for index.html

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -5,6 +9,14 @@ html {
 body {
     font-style: normal;
     font-weight: 400;
+}
+
+body:after {
+    content: url("../img/bg-picture.svg");
+    position: fixed;
+    top: 150px;
+    left: 50%;
+    z-index: -1;
 }
 
 a {
@@ -21,11 +33,12 @@ a {
 /*Header*/
 
 .header {
-    min-height: 80px;
+    min-height: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     text-align: center;
+    padding: 10px;
 }
 
 .aside-wrapper {
@@ -39,6 +52,7 @@ a {
     font-size: 2.2rem;
     line-height: 2.8rem;
     letter-spacing: 0.088rem;
+    cursor: pointer;
 }
 
 .header__nav {
@@ -58,10 +72,6 @@ a {
     letter-spacing: 0.066rem;
 }
 
-.header__nav-link {
-    cursor: pointer;
-}
-
 .header__nav-item:first-child:after {
     content: '/';
     margin: 0 10px;
@@ -77,6 +87,7 @@ a {
     display: grid;
     grid-template: auto / 1fr 2fr;
     gap: 30px;
+    margin: 70px auto;
 }
 
 .main__nav-list {
@@ -85,13 +96,16 @@ a {
     align-items: flex-start;
     gap: 70px;
     padding: 10px;
+    position: sticky;
+    top: 0;
 }
 
 .main__nav-item {
+    width: 100%;
     border-bottom: 1px solid #BDBDBD;
 }
 
-.main__nav-link {
+.main__nav-link, .main__chapter-title {
     font-family: 'Francois One', sans-serif;
     font-size: 3.6rem;
     line-height: 4.8rem;
@@ -99,6 +113,67 @@ a {
     text-transform: uppercase;
 }
 
+.main__chapter-title {
+    margin-top: 20px;
+}
+
+.main__chapter-title:before {
+    content: '';
+    width: 100px;
+    height: 8px;
+    background: #000000;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.main__chapter-number {
+    font-family: 'Farro', sans-serif;
+    font-weight: 300;
+    font-size: 2rem;
+    line-height: 3rem;
+    letter-spacing: 0.144rem;
+    vertical-align: text-top;
+    margin-left: 10px;
+}
+
 .main__text {
-    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    padding-right: 10px;
+}
+
+.main__text-chapter {
+    display: flex;
+    flex-direction: column;
+    /*align-items: flex-start;*/
+    gap: 40px;
+    position: relative;
+}
+
+.main__chapter-text {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 2.8rem;
+    line-height: 4.8rem;
+}
+
+.text_underline {
+    text-decoration: underline;
+}
+
+.text_italic {
+    font-style: italic;
+}
+
+.text_bold {
+    font-weight: 700;
+}
+
+.text_code {
+    background: #DADADA;
+}
+
+.text_new-line {
+    display: inline-block;
 }
